<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_staff"
            android:icon="@drawable/ic_staff"
            android:title="@string/menu_staff" />
        <item
            android:id="@+id/nav_kurikulum"
            android:icon="@drawable/ic_book"
            android:title="@string/menu_kurikulum" />
        <item
            android:id="@+id/nav_lulusan"
            android:icon="@drawable/ic_group"
            android:title="@string/menu_lulusan" />
        <item
            android:id="@+id/nav_fasilitas"
            android:icon="@drawable/ic_fasilitas"
            android:title="@string/menu_fasilitas" />
    </group>
</menu>